remove trash files and fixed test

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     master: -r test_requirements.txt
     dev: -r dev_requirements.txt
 commands =
-    pytest --cov=cloudshell.template tests --cov-report=xml
+    pytest tests
 
 [testenv:pre-commit]
 skip_install = true
@@ -31,7 +31,7 @@ commands =
 
 [isort]
 profile=black
-forced_separate = cloudshell.template,tests
+forced_separate = cloudshell.nvidia.onyx,tests
 skip = mibs
 
 [flake8]
