rolling back tox config changes

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     master: -r test_requirements.txt
     dev: -r dev_requirements.txt
 commands =
-    pytest tests
+    pytest --cov=cloudshell.nvidia.onyx tests --cov-report=xml
 
 [testenv:pre-commit]
 skip_install = true
